--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="style.css">
+<div>
 <h1>movie review </h1>
 <h2>batman:the dark knight</h2>
 <hr/>
@@ -17,7 +19,7 @@
     </li>
     <li>poster
 
-        <img src="C:\Users\ratan\Downloads\The_Dark_Knight_(2008_film).jpg"/>
+        <img src="C:\Users\ratan\Downloads\The_Dark_Knight_(2008_film).jpg" id="poster"/>
     </li>
     <li>trailer    
 
@@ -34,7 +36,7 @@
             </li>
         </ul>
     </li>
-    <li>rivew by bnftv(youtuber)
+    <li>rivew by bnftv(youtuber)<br/>
         <a href="https://youtu.be/5KqfJAypyjI">link to the review </a>
     </li>
 </ol>
@@ -43,8 +45,5 @@
 
 
 
-
-
-
-
 </ul>
+</div>
